# jyclzr

./: .gitignore  CMakeLists.txt  README.md  build_ios.sh  build_local.bat  build_local.sh  config.lua
.github/workflows/: build.yml
ios/: Info.plist  LaunchScreen.storyboard
ios/jyengine/: AppDelegate.h  AppDelegate.m  JYViewController.h  JYViewController.m  main.m
src/: charset.c  config.h  jymain.c  jymain.h  list.h  luafun.c  mainmap.c  piccache.c  sdl1_compat.h  sdlfun.c
